# pr-sentinel

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  self-review.yml
src/pr_sentinel/: __init__.py  crew.py  github_client.py  main.py
tests/: test_crew.py  test_github_client.py  test_main.py
