[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-sentinel"
version = "0.1.0"
description = "Multi-agent AI code review — Claude + CrewAI summarize risk and test-coverage gaps on every pull request"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[anthropic]>=0.86",
    "httpx>=0.27",
]

[project.scripts]
pr-sentinel = "pr_sentinel.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_sentinel"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
follow_imports = "silent"
exclude = ["tests/"]
